objects/Opportunity/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <formula>Primary_Contact__r.Phone</formula>
    <inlineHelpText>Primary contact&#39;s phone number</inlineHelpText>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>