objects/Opportunity/fields/Daily_Stand_up__c.field-meta.xml
<CustomField>
    <fullName>Daily_Stand_up__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox to present in the daily stand-up</inlineHelpText>
    <label>Daily Stand-up</label>
    <type>Checkbox</type>
</CustomField>