objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budgetary</fullName>
            </value>
            <value>
                <fullName>Capabilities</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Merged Opportunity</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Quote Deleted</fullName>
                <label>Quote Deleted By Customer</label>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>