objects/Opportunity/fields/Loss_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Detail__c</fullName>
    <label>Loss Reason Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loss_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Not Offered</fullName>
            </value>
            <value>
                <fullName>Size Large</fullName>
            </value>
            <value>
                <fullName>Size Small</fullName>
            </value>
            <value>
                <fullName>Not Manufacturable</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Finish</fullName>
            </value>
            <value>
                <fullName>Lead Time</fullName>
            </value>
            <value>
                <fullName>Exceeds Comfort of Engineering / Project Team</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Higher than Budget</fullName>
            </value>
            <value>
                <fullName>Won&#39;t Be Project Progress for 9+ Months</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>Entire Project Canceled</fullName>
            </value>
            <value>
                <fullName>Phone Number Given</fullName>
            </value>
            <value>
                <fullName>Phone Number Not Given</fullName>
            </value>
            <value>
                <fullName>Potential Partner</fullName>
            </value>
            <value>
                <fullName>Price Shopping</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>