objects/Opportunity/fields/Manufacturing_Process_Integration__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Process_Integration__c</fullName>
    <label>Manufacturing Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>