objects/Opportunity/fields/Number_of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quotes__c</fullName>
    <label>Number of Quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>