objects/Opportunity/fields/Total_Quoted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Quoted_Amount__c</fullName>
    <label>Total Quoted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>