objects/Opportunity/fields/Xometry_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_ID__c</fullName>
    <externalId>true</externalId>
    <label>Xometry ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>