objects/Opportunity/recordTypes/Xometry_Standard_Sales.recordType-meta.xml
<RecordType>
    <fullName>Xometry_Standard_Sales</fullName>
    <active>true</active>
    <businessProcess>Xometry Sales Process</businessProcess>
    <description>Xometry Standard Sales</description>
    <label>Xometry Standard Sales</label>
</RecordType>