objects/Opportunity/validationRules/Duplicate_Opp_No_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Opp_No_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Loss_Reason__c , &quot;Duplicate Opportunity&quot;), ISBLANK( Description ))</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Please Enter Details about the Duplicate Opportunity</errorMessage>
</ValidationRule>