objects/Opportunity/listViews/My_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Open_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Next_Step_Date__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Opportunity_Created_Date__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Lost,Closed Won</value>
    </filters>
    <label>My Open Opportunities ✅ Enhanced</label>
</ListView>