objects/Opportunity/listViews/Sales_Team.listView-meta.xml
<ListView>
    <fullName>Sales_Team</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Next_Step_Date__c</columns>
    <columns>Manufacturing_Process_Integration__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>Xometry</value>
    </filters>
    <label>All Sales Team Opps</label>
    <sharedTo>
        <role>Executive_Leadership</role>
        <role>Sales_Leadership</role>
    </sharedTo>
</ListView>